[build-system]
requires = [
    "setuptools>=42",
    ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['figaro', 'figaro._pipelines']

[project]
name = 'figaro'
description = 'FIGARO: Fast Inference for GW Astronomy, Research & Observations'
version = '1.8.5'
requires-python = '>= 3.9'
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ['DPGMM', 'HDPGMM', 'figaro', 'hierarchical', 'inference']
authors = [
  {name = "Stefano Rinaldi", email = "stefano.rinaldi@uni-heidelberg.de"},
  {name = "Walter Del Pozzo", email = "walter.delpozzo@unipi.it"},
  ]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  'Topic :: Scientific/Engineering :: Astronomy',
  'Topic :: Scientific/Engineering :: Physics',
]

dependencies = [
    "numpy > 1.22",
    "scipy",
    "matplotlib != 3.6.3",
    "dill",
    "corner",
    "numba",
    "h5py",
    "tqdm",
    "astropy",
    "ray",
    ]

[project.urls]
Documentation = "https://figaro.readthedocs.io"
Repository = "https://github.com/sterinaldi/FIGARO.git"
Issues = "https://github.com/sterinaldi/FIGARO/issues"

[project.scripts]
figaro-density          = "figaro._pipelines.probability_density:main"
figaro-hierarchical     = "figaro._pipelines.hierarchical_inference:main"
figaro-par-hierarchical = "figaro._pipelines.par_hierarchical_inference:main"
figaro-par-density      = "figaro._pipelines.par_probability_density:main"
